--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css'>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js'></script>
     <link rel="stylesheet" href="style.css">
-    <title>Property Listings</title>
+    <title>To-let for Residential</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: salmon; position: sticky; top: 0; ">
+    <nav class="navbar navbar-expand-lg navbar-dark"
+       style="background-color: salmon; position: sticky; top: 0put0for sticky; ">
         <div class="container-fluid">
-          <a class="navbar-brand fw-bold" href="#Home">Brand Logo</a>
+          <a class="navbar-brand fw-bold" href="#Home">
+            <img src="room property/img/logo.png" alt="Tolet-logo" style="height: 40px; border-radius: 10%;">
+          </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -41,55 +44,60 @@
             </form>
           </div>
         </div>
-      </nav>
+    </nav>
     <div class="container" id="Home">
-        <!-- Add more property listings here -->
-        <div class="row property">
-            <div class="col first">
-               <div class="property-image">
-                  <img src="room property/img/download.jfif" height="10px" alt="Property 1">
-              </div>
-            </div>
-            <div class="col">
-                <div class="property-content">
-                    <h3>Spacious House</h3>
-                    <p>Price: $1200/mo</p>
-                    <p>Location: Peddapuram</p>
-                    <a href="room property/first.html">View Details</a>
-                </div>
-            </div>
-        </div>
+      <!-- Add more property listings here -->
         <div class="row property">
             <div class="col">
                <div class="property-image">
+                  <span id="bookingNumber" class="booking-number">ID : 456</span>
                   <img src="room property/img/OIP (1).jfif" height="10px" alt="Property 1">
               </div>
             </div>
             <div class="col">
                 <div class="property-content">
-                    <h3>Spacious House</h3>
-                    <p>Price: $1200/mo</p>
-                    <p>Location: Peddapuram</p>
+                    <h3>Mt. Everest House</h3>
+                    <p>Price: $3000/mo</p>
+                    <p>Type: 1BHK</p>
+                    <p>Location: samalkot road</p>
                     <a href="room property/first.html">View Details</a>
                 </div>
             </div>
         </div>
         <div class="row property">
-            <div class="col">
-               <div class="property-image">
-                  <img src="room property/img/OIP.jfif" height="10px" alt="Property 1">
-              </div>
+          <div class="col">
+             <div class="property-image">
+                <span id="bookingNumber" class="booking-number">ID : 296</span>
+                <img src="room property/img/OIP (1).jfif" height="10px" alt="Property 1">
             </div>
-            <div class="col">
-                <div class="property-content">
-                    <h3>Spacious House</h3>
-                    <p>Price: $1200/mo</p>
-                    <p>Location: Peddapuram</p>
-                    <a href="room property/first.html">View Details</a>
-                </div>
+          </div>
+          <div class="col">
+              <div class="property-content">
+                  <h3>Lal Qila House</h3>
+                  <p>Price: $4000/mo</p>
+                  <p>Type: 1BHK</p>
+                  <p>Location: Ghoral Center</p>
+                  <a href="room property/first.html">View Details</a>
+              </div>
+          </div>
+      </div>
+      <div class="row property">
+        <div class="col">
+           <div class="property-image">
+              <span id="bookingNumber" class="booking-number">ID : 199</span>
+              <img src="room property/img/OIP (1).jfif" height="10px" alt="Property 1">
+          </div>
+        </div>
+        <div class="col">
+            <div class="property-content">
+                <h3>Taj Mahal House</h3>
+                <p>Price: $7000/mo</p>
+                <p>Type: 2BHK</p>
+                <p>Location: Beside Bus Station</p>
+                <a href="room property/first.html">View Details</a>
             </div>
         </div>
-        
+      </div>
     </div>
     <br><br><br><br><br><br><br>
     <section id="How_It_Works">
@@ -167,6 +175,7 @@
       </div>
       <br><br><br><br><br><br><br>
     </section>
+    
     <footer>
         <div class="container">
             <p>&copy; 2023 Rental Properties. All rights reserved.</p>
