--- a/room property/contact.html
+++ b/room property/contact.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="contactstyle.css">
-    <title>Contact Information</title>
+    <title>To-let for Residential</title>
 </head>
 <body>
     <div class="container mt-5">
@@ -24,18 +24,38 @@
                         <td>Hindi<br>English</td>
                         <td>
                             <a href="tel:9581872410">Call: 9581872410</a><br>
-                            <a href="https://wa.me/919581872410" target="_blank">WhatsApp: 9581872410</a>
+                            <a href="https://wa.me/919581872410?text=I%20want%20to%20book%20room%20having%20ID_number%20'???'%20is%20this%20available%20?" target="_blank">WhatsApp: 9581872410</a>
                         </td>
                     </tr>
                     <tr>
                         <td>Telugu</td>
                         <td>
-                            <a href="tel:8688814845">Call: 8688814845</a><br>
-                            <a href="https://wa.me/918688814845" target="_blank">WhatsApp: 8688814845</a>
+                            <a href="tel:9581872410">Call: 9581872410</a><br>
+                            <a href="https://wa.me/919581872410?text=I%20want%20to%20book%20room%20having%20ID_number%20'???'%20is%20this%20available%20?" target="_blank">WhatsApp : 9581872410</a>
                         </td>
                     </tr>
                 </tbody>
             </table>
+        </div>
+        <div>
+            <h6>NOTE : Please note that to reserve your favorite room, a payment of Rs 100 is required. New clients are eligible for a 50% discount, so take advantage of this offer to secure your preferred room before it's chosen by someone else. Thank you for choosing us!</h6>
+        </div>
+        <div class="payment-section mt-5">
+            <h1 class="text-center">Make a Payment</h1>
+            <p>Please choose a payment method:</p>
+            <div class="row">
+                <!-- Credit Card and PayPal payment options (if needed) -->
+
+                <!-- UPI payment option -->
+                <div class="col-md-6">
+                    <h1>UPI</h1>
+                    <!-- Add your UPI payment link here -->
+                    <h5>New Client</h5>
+                    <a href="upi://pay?pa=9581872410@paytm&pn=YourName&tn=Payment%20for%20Service&am=50" class="btn btn-primary">Pay with UPI</a><br><br>
+                    <h5>Existing Client</h5>
+                    <a href="upi://pay?pa=9581872410@paytm&pn=YourName&tn=Payment%20for%20Service&am=100" class="btn btn-primary">Pay with UPI</a>
+                </div>
+            </div>
         </div>
     </div>
 </body>
