--- a/room property/first.html
+++ b/room property/first.html
@@ -7,9 +7,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <title>Things to Consider Before Renting a Room</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <title>To-let for Residential</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -69,7 +69,6 @@
 </head>
 <body>
     <div class="container">
-        <a href="#action-button" class="action-button">Contact Us</a>
         <h1>Things to Consider Before Renting a Room</h1>
         <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
@@ -127,7 +126,7 @@
                 </tr>
                 <tr>
                     <td><strong>Lease Terms</strong></td>
-                    <td>What are the terms of the lease or rental agreement, including the duration and any specific rules?</td>
+                    <td>No need</td>
                 </tr>
                 <tr>
                     <td><strong>Room Size</strong></td>
@@ -135,7 +134,8 @@
                 </tr>
                 <tr>
                     <td><strong>Amenities</strong></td>
-                    <td>What amenities are included, such as furniture, appliances, internet, and utilities?</td>
+                    <td>Only room with doors and window</td>
+                    <!-- what amenities are included, such as furniture, appliances, internet, and utilities? -->
                 </tr>
                 <tr>
                     <td><strong>Security</strong></td>
@@ -147,15 +147,11 @@
                 </tr>
                 <tr>
                     <td><strong>Pet Policy</strong></td>
-                    <td>Check if pets are allowed if you have or plan to have pets.</td>
+                    <td>Not allowed</td>
                 </tr>
                 <tr>
                     <td><strong>Maintenance</strong></td>
                     <td>Inquire about the maintenance and repair responsibilities for the room and common areas.</td>
-                </tr>
-                <tr>
-                    <td><strong>Deposit and Fees</strong></td>
-                    <td>Understand any security deposits, application fees, and other costs involved.</td>
                 </tr>
                 <tr>
                     <td><strong>References</strong></td>
