--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <!-- Add more property listings here -->
         <div class="row property">
             <div class="col">
-               <div class="property-image">
+               <div class="property-image" style="position: relative;">
                   <span id="bookingNumber" class="booking-number">ID : 456</span>
                   <img src="room property/img/OIP (1).jfif" height="10px" alt="Property 1">
               </div>
