--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <meta name="google-site-verification" content="vHGypvTWD3MjOvesaYykMrOrWgDSmN30AYRqMnzjw9k" />
     <link rel="stylesheet" href="style.css">
     <title>To-let for Residential</title>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6FTBT53CEV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6FTBT53CEV');
+</script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark"
