--- a/room property/first.html
+++ b/room property/first.html
@@ -67,6 +67,15 @@
             background-color: #0056b3;
         }
     </style>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6FTBT53CEV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6FTBT53CEV');
+</script>
 </head>
 <body>
     <div class="container">
