--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
           </div>
         </div>
     </nav>
+    <center>
+      <div class="p-4" style="font-size: 20px;">
+        <marquee behavior=alternate direction="right" loop="">
+          To register your rooms
+          </marquee>
+          <a href="https://wa.me/919581872410?text=I%20want%20to%20register%20room%20here." target="_blank">Click Me</a>
+      </div>
+    </center>
     <div class="container" id="Home">
       <!-- Add more property listings here -->
         <div class="row property">
