--- a/room property/contact.html
+++ b/room property/contact.html
@@ -50,22 +50,24 @@
         <div>
             <h6>NOTE : Please note that to reserve your favorite room, a payment of Rs 100 is required. New clients are eligible for a 50% discount, so take advantage of this offer to secure your preferred room before it's chosen by someone else. Thank you for choosing us!</h6>
         </div>
-        <div class="payment-section mt-5">
-            <h1 class="text-center">Make a Payment</h1>
-            <p>Please choose a payment method:</p>
-            <div class="row">
-                <!-- Credit Card and PayPal payment options (if needed) -->
-
-                <!-- UPI payment option -->
-                <div class="col-md-6">
-                    <h1>UPI</h1>
-                    <!-- Add your UPI payment link here -->
-                    <h5>New Client</h5>
-                    <a href="upi://pay?pa=9581872410@paytm&pn=YourName&tn=Payment%20for%20Service&am=50" class="btn btn-primary">Pay with UPI</a><br><br>
-                    <h5>Existing Client</h5>
-                    <a href="upi://pay?pa=9581872410@paytm&pn=YourName&tn=Payment%20for%20Service&am=100" class="btn btn-primary">Pay with UPI</a>
+        <center>
+            <div class="payment-section mt-5">
+                <h1 class="text-center">Make a Payment</h1>
+                <p>Please choose a payment method:</p>
+                <div class="row">
+                    <!-- Credit Card and PayPal payment options (if needed) -->
+    
+                    <!-- UPI payment option -->
+                    <div class="col-md-6">
+                        <h1>UPI</h1>
+                        <!-- Add your UPI payment link here -->
+                        <h5>New Client</h5>
+                        <a href="upi://pay?pa=9581872410@paytm&pn=YourName&tn=Payment%20for%20Service&am=50" class="btn btn-primary">Pay with UPI</a><br><br>
+                        <h5>Existing Client</h5>
+                        <a href="upi://pay?pa=9581872410@paytm&pn=YourName&tn=Payment%20for%20Service&am=100" class="btn btn-primary">Pay with UPI</a>
+                    </div>
                 </div>
-            </div>
+        </center>
         </div>
     </div>
 </body>
