--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css'>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js'></script>
     <meta name="google-site-verification" content="vHGypvTWD3MjOvesaYykMrOrWgDSmN30AYRqMnzjw9k" />
+    <meta name="78c4e222e4e5e76fbfcf1ba280e70fc8b7ce4424" content="78c4e222e4e5e76fbfcf1ba280e70fc8b7ce4424" />
     <link rel="stylesheet" href="style.css">
     <title>To-let for Residential</title>
     <!-- Google tag (gtag.js) -->
